--- a/index.html
+++ b/index.html
@@ -46,23 +46,67 @@
                 <li><a href="#">•Syllabus</a></li>
                 </ul>
             </li>
-            <li><a class="join" href="#">Join Now!</a></li>
+            <li><a class="join" href="#">Join!</a></li>
         </ul>
     </nav>
 
     <div class="homepage">
+        <div class="hero-text">
+            <h1>REGISTRATIONS OPEN!</h3>
+            <h3>Interested? Click here to apply!</h3>
+            <a class="join-cta" href="#">Join Now!</a>
+        </div>
+        <img class="hero" src="/imgs/hero img 2.png" alt="">
+        <div class="orange-background"><img class="hero-background" src="/imgs/hero background.jpg" alt=""></div>
+    </div>
+
+    <div class="aboutpage">
         <div class="ribbon">
             <div class="red-vector"></div>
             <div class="navyblue-vector"></div>
             <div class="skyblue-vector"></div>
         </div>
-        <div class="hero-text">
-            <h1>REGISTRATIONS OPEN!</h3>
-            <h3>Interested? Click here to apply!</h3>
-            <div class="join-cta">Join Now!</div>
+        <div class="about-main-content">
+            <div class="about-ncc">
+                <h1>WHAT IS NCC</h1>
+                <h3>• The National Cadet Corps (NCC) is a Voluntary Youth Military Organization in India under the Ministry of Defense with its Headquarters at New Delhi.</h3>
+                <h3>• The organization recruits cadets from high schools, colleges and universities all over India. The Cadets are given basic military training in small arms, parades, personality development and are involved into social service.</h3>
+            </div>
+            <div class="about-bnmit-ncc">
+                <h1>BNMIT NCC</h1>
+                <img src="/imgs/timeline.svg" alt="">
+                <h3>• BNMIT NCC has a total strength of 52 cadets headed by Associate NCC Officer Lt. Rohini T.</h3>
+                <h3>• The organization recruits cadets from high schools, colleges and universities all over India. The Cadets are given basic military training in small arms, parades, personality development and are involved into social service.</h3>
+            </div>
+            <div class="slider">
+                <div class="slide-track">
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
-        <img class="hero" src="/imgs/hero img 2.png" alt="">
-        <div class="orange-background"><img class="hero-background" src="/imgs/hero background.jpg" alt=""></div>
     </div>
 
 </body>
