--- a/index.html
+++ b/index.html
@@ -78,33 +78,31 @@
                 <h3>• BNMIT NCC has a total strength of 52 cadets headed by Associate NCC Officer Lt. Rohini T.</h3>
                 <h3>• The organization recruits cadets from high schools, colleges and universities all over India. The Cadets are given basic military training in small arms, parades, personality development and are involved into social service.</h3>
             </div>
-            <div class="slider">
-                <div class="slide-track">
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="/imgs/WhatsApp Image 2022-11-06 at 22.20.28.jpg" alt="">
-                    </div>
-                </div>
+            <section class="slider-container">
+                <article class="slider">
+                  <div>
+                    <ul>
+                      <li><img src="http://dummyimage.com/600x400/000000/ffffff.png" /></li>
+                      <li><img src="http://dummyimage.com/600x400/eeeeee/cccccc.png" /></li>
+                      <li><img src="http://dummyimage.com/600x400/000000/ffffff.png" /></li>
+                      <li><img src="http://dummyimage.com/600x400/eeeeee/cccccc.png" /></li>
+                    </ul>
+                  </div>
+                  <div>
+                    <ul>
+                      <li><img src="http://dummyimage.com/600x400/000000/ffffff.png" /></li>
+                      <li><img src="http://dummyimage.com/600x400/eeeeee/cccccc.png" /></li>
+                      <li><img src="http://dummyimage.com/600x400/000000/ffffff.png" /></li>
+                      <li><img src="http://dummyimage.com/600x400/eeeeee/cccccc.png" /></li>
+                    </ul>
+                  </div>
+                </article>
+            </section>
+        </div>
+        <div class="about-main-content-2">
+            <div class="content-container">
+                <h1>MISSION</h1>
+                <h3></h3>
             </div>
         </div>
     </div>
